-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 16
-
Component/s: hotspot
-
b07
-
aarch64
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8280769 | 11.0.16-oracle | Fairoz Matte | P4 | Resolved | Fixed | b01 |
| JDK-8254640 | 11.0.13 | Bernhard Urban-Forster | P4 | Resolved | Fixed | b04 |
| JDK-8287218 | 8u351 | Fairoz Matte | P4 | Resolved | Fixed | b01 |
All of the uses of long and unsigned long int should be replaced with more appropriate types. Where signed and unsigned 64-bit integers are required, use int64_t. Where pointers are required, use intptr_t. Where Java longs are required, use jlong.
- backported by
-
JDK-8254640 AArch64: Remove uses of long and unsigned long ints
-
- Resolved
-
-
JDK-8280769 AArch64: Remove uses of long and unsigned long ints
-
- Resolved
-
-
JDK-8287218 AArch64: Remove uses of long and unsigned long ints
-
- Resolved
-
- relates to
-
JDK-8250824 AArch64: follow up for JDK-8248414
-
- Resolved
-
-
JDK-8273939 Backport of 8248414 to JDK11 breaks MacroAssembler::adrp
-
- Resolved
-
-
JDK-8251930 AArch64: Native types mismatch in hotspot
-
- Resolved
-
(1 relates to, 2 links to)