8248414: AArch64: Remove uses of long and unsigned long ints

Backport c7d84850bfdbd112a495fab453a79832e3810f47